--- a/TOD/CSS and FlexBox/landing page/landing.html
+++ b/TOD/CSS and FlexBox/landing page/landing.html
@@ -134,27 +134,27 @@
     <h2>What We Offer</h2>
     <div class="info-blocks">
       <div class="info-block">
-        <img src="https://via.placeholder.com/200" alt="Feature 1">
+        <img src="" alt="Feature 1">
         <h3>Feature One</h3>
         <p>Experience the best design tools right at your fingertips, all optimized for performance.</p>
       </div>
       <div class="info-block">
-        <img src="https://via.placeholder.com/200" alt="Feature 2">
+        <img src="" alt="Feature 2">
         <h3>Feature Two</h3>
         <p>Get creative with our intuitive interface that makes web design a breeze!</p>
       </div>
       <div class="info-block">
-        <img src="https://via.placeholder.com/200" alt="Feature 3">
+        <img src="" alt="Feature 3">
         <h3>Feature Three</h3>
         <p>With responsive layouts, your website will look perfect on all devices.</p>
       </div>
       <div class="info-block">
-        <img src="https://via.placeholder.com/200" alt="Feature 4">
+        <img src="" alt="Feature 4">
         <h3>Feature Four</h3>
         <p>Our advanced features allow for deep customization without compromising ease of use.</p>
       </div>
       <div class="info-block">
-        <img src="https://via.placeholder.com/200" alt="Feature 5">
+        <img src="" alt="Feature 5">
         <h3>Feature Five</h3>
         <p>Stay ahead of the curve with the latest web design trends integrated into our platform.</p>
       </div>
