--- a/TOD/CSS and FlexBox/landing page/landing.html
+++ b/TOD/CSS and FlexBox/landing page/landing.html
@@ -9,10 +9,10 @@
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #1F2937;
-      color: #F9FAF8;
+      background-color: #87CEEB; /* Sky blue background color */
+      color: #1F2937;
     }
-    
+
     h1, h2, h3 {
       margin: 0;
     }
@@ -21,13 +21,13 @@
     .hero {
       text-align: center;
       padding: 100px 20px;
-      background-color: #1F2937;
+      background-color: #87CEEB; /* Sky blue background for hero section */
     }
 
     .hero h1 {
       font-size: 48px;
       font-weight: 900;
-      color: #F9FAF8;
+      color: #1F2937;
     }
 
     .hero p {
@@ -69,7 +69,7 @@
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
-      gap: 20px; /* Adding space between blocks */
+      gap: 20px;
     }
 
     .info-block {
@@ -134,29 +134,31 @@
     <h2>What We Offer</h2>
     <div class="info-blocks">
       <div class="info-block">
-        <img src="" alt="Feature 1">
+        <img src="https://i.pinimg.com/originals/d6/8c/33/d68c333aae7879d9e08bf3e412e7ce84.jpg" alt="Feature 1">
         <h3>Feature One</h3>
-        <p>Experience the best design tools right at your fingertips, all optimized for performance.</p>
+        <p>Never Gonna Give You Up, Never Gonna Let You Down...</p>
       </div>
       <div class="info-block">
-        <img src="" alt="Feature 2">
+        <img src="https://i.pinimg.com/originals/d6/8c/33/d68c333aae7879d9e08bf3e412e7ce84.jpg" alt="Feature 2">
         <h3>Feature Two</h3>
-        <p>Get creative with our intuitive interface that makes web design a breeze!</p>
+        <p>Never gonna run around and desert you...</p>
       </div>
       <div class="info-block">
-        <img src="" alt="Feature 3">
+        <img src="https://pyxis.nymag.com/v1/imgs/2e3/cc4/36e1610a7f36b85edde16652e6325eb2df-diddy-current-lawsuits.1x.rsquare.w1400.jpg" alt="Feature 3">
         <h3>Feature Three</h3>
-        <p>With responsive layouts, your website will look perfect on all devices.</p>
+        <p>Ain't No Party Like a Diddy Party...</p>
       </div>
       <div class="info-block">
-        <img src="" alt="Feature 4">
+        <img src="https://i.pinimg.com/originals/d6/8c/33/d68c333aae7879d9e08bf3e412e7ce84.jpg" alt="Feature 4">
         <h3>Feature Four</h3>
-        <p>Our advanced features allow for deep customization without compromising ease of use.</p>
+        <p>Never gonna make you cry...</p>
       </div>
       <div class="info-block">
-        <img src="" alt="Feature 5">
+        <img src="https://i.pinimg.com/originals/d6/8c/33/d68c333aae7879d9e08bf3e412e7ce84.jpg" alt="Feature 5">
         <h3>Feature Five</h3>
-        <p>Stay ahead of the curve with the latest web design trends integrated into our platform.</p>
+        <p>Never gonna say goodbye
+          Never gonna tell a lie and hurt you...
+          </p>
       </div>
     </div>
   </div>
